[package]
name = "learning-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[[bin]]
name = "fibo-seq-recursive"
path = "src/fibo-seq-recursive.rs"

[[bin]]
name = "first-word"
path = "src/first-word.rs"
